fixed timezone, log monitoring and form submission

--- a/src/Public/index.html
+++ b/src/Public/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h2>Birthday Wishes Form</h2>
-    <form id="birthdayForm" action="/add" method="POST" >
+    <form id="birthdayForm" action="/add" method="POST" enctype="multipart/form-data" >
       <div class="form-group">
         <label for="username">Username</label>
         <input type="text" id="username" name="username" required>
