--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
+  <!-- fucking work -->
   <div class="container">
     <h2>Birthday Wishes Form</h2>
     <form id="birthdayForm" action="/add" method="POST" enctype="multipart/form-data" >
